added functionality to add store locations to database, but ui is still a mess

--- a/app/src/main/res/layout/fragment_store_set_up.xml
+++ b/app/src/main/res/layout/fragment_store_set_up.xml
@@ -1,18 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".StoreSetUpFragment">
 
-    <TextView
-        android:id="@+id/textView2"
+
+    <EditText
+        android:id="@+id/storeSetUp_et_locationName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
+        android:hint="Enter location name:"
+        android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@+id/storeSetUp_tv_storeLocationList"
+        app:layout_constraintEnd_toStartOf="@+id/storeSetUp_bt_add"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <Button
+        android:id="@+id/storeSetUp_bt_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/placeholder_text_store"
-        android:textColor="@color/black"
-        android:textSize="36sp" />
+        android:layout_marginStart="16dp"
+        android:text="Add"
+        app:layout_constraintBottom_toTopOf="@+id/storeSetUp_bt_move"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/storeSetUp_et_locationName"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+
+    <ScrollView
+        android:id="@+id/scrollView2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toTopOf="@id/storeSetUp_et_locationToMove"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/storeSetUp_et_locationName">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/storeSetUp_tv_storeLocationList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/placeholder_text_store"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+        </LinearLayout>
+    </ScrollView>
+
+    <EditText
+        android:id="@+id/storeSetUp_et_locationToMove"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Move Location"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/storeSetUp_et_locationPrior"
+        android:layout_width="131dp"
+        android:layout_height="wrap_content"
+        android:hint="after location"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/storeSetUp_bt_move"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/storeSetUp_et_locationToMove"
+        app:layout_constraintTop_toBottomOf="@+id/storeSetUp_bt_add" />
+
+    <Button
+        android:id="@+id/storeSetUp_bt_move"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="Move"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/storeSetUp_et_locationPrior"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/storeSetUp_et_locationPrior"
+        app:layout_constraintStart_toStartOf="@+id/storeSetUp_et_locationPrior"
+        app:layout_constraintTop_toBottomOf="@+id/storeSetUp_bt_add" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
