--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,7 +9,7 @@
         android:icon="@drawable/ic_baseline_shopping_cart_24"
         android:title=""/>
     <item
-        android:id="@+id/storeSetUpFragment"
+        android:id="@+id/setUpFragment"
         android:icon="@drawable/ic_baseline_store_24"
         android:title=""/>
 </menu>
